fix: some aligning styles fixed

--- a/src/sass/components/mobile.sass
+++ b/src/sass/components/mobile.sass
@@ -24,6 +24,7 @@
   &__title
     font-size: 26px
     font-weight: 400
+    text-align: center
 
   &__cell
     display: flex
@@ -51,6 +52,7 @@
 
   &__field
     display: flex
+    justify-content: center
     font-size: 30px
     font-weight: 700
     letter-spacing: -1px
@@ -93,6 +95,8 @@
     display: grid
     grid-template-columns: min-content 1fr
     grid-gap: 10px
+    align-items: center 
+    padding: 6px
 
   &__qr
     position: absolute
